--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
   </head>
   <body>
     <div class="container">
-      <h1>HTML help</h1>
-
-      <p>This is a very special page. If you click somewhere, it will tell you what type of HTML element you clicked on.</p>
-
-      <p>Look at this cute walrus!</p>
-      <img src="img/main.jpg">
-
+      <div style="position: relative; left: 0; top: 0;">
+        <img src="img/main.jpg" class="MainUnderImage"/>
+        <img src="img/logo.jpg" class="LogoImage"/>
+      </div>
+      <div class="centered">Centered</div>
     </div>
     <div class="container">
       <h1>HTML help</h1>
@@ -28,12 +26,56 @@
 
     </div>
     <div class="container">
-      <h1>HTML help</h1>
-
-      <p>This is a very special page. If you click somewhere, it will tell you what type of HTML element you clicked on.</p>
-
-      <p>Look at this cute walrus!</p>
-      <img src="img/main.jpg">
+      <div class="row>"
+        <h1>HTML help</h1>
+        <p>This is a very special page. If you click somewhere, it will tell you what type of HTML element you clicked on.</p>
+        <p>Look at this cute walrus!</p>
+        
+      </div>
+      <div class="row">
+        <div class="col-md-3"   
+            <p><h2>Page content</h2></p>
+            <p class="description">tellus est dapibus magna, eget auctor ligula elit eu nibh. Proin a turp
+                is eros. Etiam gravida at sapien nec egestas. Nam et tempus arcu, porta facilisis diam.</p>
+        </div>
+        <div class="col-md-3"
+          <p><h2>Background</h2></p>
+          <p class="description">ellentesque habiProin a turpis eros. Etiam gravida at sapien nec egestas. Nam et tempus
+                arcu, porta facilisis diam.</p>
+        </div>
+        <div class="col-md-3"
+          <P><h2>education</h2></P>
+          <p class="description">Pellentes. Proin a turpis eros. Etiam gravida at sapien nec egestas. Nam et tempus arcu, 
+                porta facilisis diam.</p>
+        </div>
+        <div class="col-md-3"
+          <p><h2>experience</h2></p>
+          <p class="description">Pellenteipit, ex a aliquam iaculis, tellus est dapibus magna, eget auctor ligula elit eu nibh. 
+                Proin a turpis eros. Etiam gravida at sapien nec egestas. Nam et tempus arcu, porta facilisis diam.</p>
+        </div>
+      </div>
+      <div class="row"
+        <div class="col-md-3"
+          <p><h2>why i decided to take programming</h2></p>
+          <p class="description">Pellentcipit, ex a aliquam iaculis, tellus est dapibus magna, eget auctor ligula elit eu nibh. P
+                roin a turpis eros. Etiam gravida at sapien nec egestas. Nam et tempus arcu, porta facilisis diam.</p>
+        </div>
+        <div class="col-md-3"
+          <p> <h2>intrests and Hobbies</h2></p>
+          <p class="description">Pellen a aliquam iaculis, tellus est dapibus magna, eget auctor ligula elit eu nibh. Proin a turpis 
+                ros. Etiam gravida at sapien nec egestas. Nam et tempus arcu, porta facilisis diam.</p>
+        </div>
+        <div class="col-md-3"
+          <h2> i decided to take programming</h2>
+          <p class="description">gna, eget auctor ligula elit eu nibh. P
+                roin><h2>w a turpis eros. Etiam gravida at sapien nec egestas. Nam et tempus arcu, porta facilisis diam.</p>
+        </div>
+        <div class="col-md-3"
+          <p> <h2>intrests and Hobbies</h2></p>
+          <p class="description">Pellentes, tellus est dapibus magna, eget auctor ligula elit eu nibh. Proin a turpis 
+                ros. Etiam gravida at sapien nec egestas. Nam et tempus arcu, porta facilisis diam.</p>
+        </div>
+      </div>
 
     </div>
     <div class="container">
