--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <img src="img/main.jpg" class="MainUnderImage"/>
         <img src="img/logo.jpg" class="LogoImage"/>
       </div>
-      <div class="centered">Centered</div>
+      <div class="centered">WELCOME</div>
+      <div class="centered2">TO DELANI STUDIO</div>
+      <div class="centered3">AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIROMEMT</div>
     </div>
     <div class="container">
       <h1>HTML help</h1>
