add portofolio images

--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
     <div >
     <div class="container">
       <div class="row">
-        <P><h1>ABOUT US</h1><br>  When you work with us, you are part of a team of commited collaborators. All aspect of our software 
-          development process are intergrated, interactive and agile.<br> Our approach unifies design, 
-          development and project management to create excedptional products.<br> We start each project by
-          understanding your buisness goals, the users needs and product requirements. <br>Then we help translate 
-          them into effective and elegant solutions
-        </p>
+          <h1 style="text-align: centre;">  </h1>
+          <p style="text-align: center;">ABOUT US<br>When you work with us, you are part of a team of commited collaborators. All aspect of our software 
+            development process are intergrated, interactive and agile.<br> Our approach unifies design, 
+            development and project management to create excedptional products.<br> We start each project by
+            understanding your buisness goals, the users needs and product requirements. <br>Then we help translate 
+            them into effective and elegant solutions
+          </p>
       </div>
       <div class="row">
           <img src="img/services.jpg">
@@ -47,47 +48,31 @@
         
       </div>
       <div class="row">
-        <div class=" col-md-3">  
-            <p><h2>Page content</h2></p>
-            <p class="description">tellus est dapibus magna, eget auctor ligula elit eu nibh. Proin a turp
-                is eros. Etiam gravida at sapien nec egestas. Nam et tempus arcu, porta facilisis diam.</p>
+        <div class=" col-md-3"> 
+            <img src="img/work1.jpg">
         </div>
         <div class="col-md-3">
-          <p><h2>Background</h2></p>
-          <p class="description">ellentesque habiProin a turpis eros. Etiam gravida at sapien nec egestas. Nam et tempus
-                arcu, porta facilisis diam.</p>
+          <img src="img/work2.jpg">
         </div>
         <div class="col-md-3">
-          <P><h2>education</h2></P>
-          <p class="description">Pellentes. Proin a turpis eros. Etiam gravida at sapien nec egestas. Nam et tempus arcu, 
-                porta facilisis diam.</p>
+          <img src="img/work3.jpg">
         </div>
         <div class="col-md-3">
-          <p><h2>experience</h2></p>
-          <p class="description">Pellenteipit, ex a aliquam iaculis, tellus est dapibus magna, eget auctor ligula elit eu nibh. 
-                Proin a turpis eros. Etiam gravida at sapien nec egestas. Nam et tempus arcu, porta facilisis diam.</p>
+          <img src="img/work4.jpg">
         </div>
       </div>
       <div class="row">
         <div class="col-md-3">
-          <p><h2>why i </h2></p>
-          <p class="description">Pellentcipit, ex a aliquam iaculis, tellus est dapibus magna, eget auctor ligula elit eu nibh. P
-                roin a turpis eros. mpus arcu, porta facilisis diam.</p>
+          <img src="img/work5.jpg">
         </div>
         <div class="col-md-3">
-          <p> <h2>intrests and Hobbies</h2></p>
-          <p class="description">Pellen a aliquam iaculis, tellus est dapibus magna, eget auctor ligula elit eu nibh. Proin a turpis 
-                ros. Etiam gravida at sapien nec egestas. Nam et tempus arcu, porta facilisis diam.</p>
+          <img src="img/work6.jpg">
         </div>
         <div class="col-md-3">
-          <h2> i  programming</h2>
-          <p class="description">gna, eget auctor ligula elit eu nibh. P
-                roin arcu, porta facilisis diam.</p>
+          <img src="img/work7.jpg">
         </div>
         <div class="col-md-3">
-          <p> <h2>intrests and Hobbies</h2></p>
-          <p class="description">Pellentes, tellus est dapibus magna, eget auctor ligula elit eu nibh. Proin a turpis 
-                ros. Etiam gravida at sapien nec egestas. Nam et tempus arcu, porta facilisis diam.</p>
+          <img src="img/work8.jpg">
         </div>
       </div>
 
