add main page changes

--- a/index.html
+++ b/index.html
@@ -11,15 +11,11 @@
     <div class="container-main">
 <!-- MAIN PAGE -->
       <div class="landing-page">
-        <img id="logo src"
-      </div>             
-            <img src="img/main.jpg">
-            
-          </div>
-          <div class="centered">WELCOME<br> TO DELANI STUDIO
-          </div>
-          <div class="centered3">AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIROMEMT
-          </div>
+        <img id="logo" src="img/logo.png" alt="">
+          <h1>Welcome<br> To Delani Studio</h1>
+            <p id="lp">Amazing people are making amazing designs in afun enviroment</p>
+        <div class="m">
+          <img id="mouseclick" src="img/mouse_click.png" alt="">
         </div>
         <div class="container">
           <div class="row">
