add second page edits

--- a/index.html
+++ b/index.html
@@ -17,28 +17,24 @@
         <div class="m">
           <img id="mouseclick" src="img/mouse_click.png" alt="">
         </div>
-        <div class="container">
-          <div class="row">
-              <h1 style="text-align: centre;">  </h1>
-              <p style="text-align: center;">ABOUT US<br>When you work with us, you are part of a team of commited collaborators. All aspect of our software 
-                development process are intergrated, interactive and agile.<br> Our approach unifies design, 
-                development and project management to create excedptional products.<br> We start each project by
-                understanding your buisness goals, the users needs and product requirements. <br>Then we help translate 
-                them into effective and elegant solutions
-              </p>
-          </div>
-          <div class="row">
-              <img src="img/services.jpg">
-              <div class="text-block">
-                <h4>SERVICES</h4>
-                <P>Before we sign a contract or write a lign of code our team
+<!--SECOND PAGE  -->
+        <div class="AboutUs">
+          <h1>ABOUT US</h1>
+            <p>When you work with us, you are part of a team of commited collaborators. All aspect of our software 
+              development process are intergrated, interactive and agile.<br> Our approach unifies design, 
+              development and project management to create excedptional products.<br> We start each project by
+              understanding your buisness goals, the users needs and product requirements. <br>Then we help translate 
+              them into effective and elegant solutions
+            </p>
+        </div>
+          <div class="Services">
+            <h2>SERVICES</h2>
+              <P>Before we sign a contract or write a lign of code our team
                     will spend the necwssary time needed to understand your project vision<br> The outcome of this scoping session 
                     is proposal or high-level scope of work <br> Based on your requirements, we can provide a complete offering or 
                     just the pieces you need 
-                </p>
+              </p>
           </div>
-        </div>
-        </div>
 <!-- PORTOFOLIO -->
         <div class="container">
           <div class="portfolio">
