--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
                     just the pieces you need 
               </p>
           </div>
+<!-- THIRD PAGE TOGGLE ICONS  -->
+          <div class="TOGG">
+            <h2>WHAT WE DO</h2>
+            <div class="row">
+              <img src="img/design.png" id="designIcon" alt="designIco">
+                <h5>DESIGN</h5>
+              <P class="design">Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.
+                Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.
+              </P>
+            </div>
+          </div>
 <!-- PORTOFOLIO -->
         <div class="container">
           <div class="portfolio">
