--- a/index.html
+++ b/index.html
@@ -39,12 +39,29 @@
           <div class="TOGG">
             <h2>WHAT WE DO</h2>
             <div class="row">
-              <img src="img/design.png" id="designIcon" alt="designIco">
-                <h5>DESIGN</h5>
-              <P class="design">Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.
-                Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.
-              </P>
-            </div>
+              <div class="col=md-4">
+                <img src="img/design.png" id="designIcon" alt="designIco">
+                  <h5>DESIGN</h5>
+                <P class="design">Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.
+                  Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.
+                </P>s
+              </div>
+
+              <div class="col=md-4">
+                <img src="img/dev.png" id="devIcon" alt="devIco">
+                  <h5>DESIGN</h5>
+                <P class="design">Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.
+                  Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.
+                </P>s
+              </div>
+
+              <div class="col=md-4">
+                <img src="img/dev.png" id="devIcon" alt="devIco">
+                  <h5>DESIGN</h5>
+                <P class="dev">Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.
+                  Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.
+                </P>s
+              </div>
           </div>
 <!-- PORTOFOLIO -->
         <div class="container">
