--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
               <div class="col=md-4">
                 <img src="img/dev.png" id="devIcon" alt="devIco">
                   <h5>DESIGN</h5>
-                <P class="design">Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.
-                  Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.
-                </P>s
+                <P class="design">All engineers are fluent in the latest enterprise, mobile and web development technologies.
+                  They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.
+                </P>
               </div>
 
               <div class="col=md-4">
-                <img src="img/dev.png" id="devIcon" alt="devIco">
+                <img src="img/product.png" id="productIcon" alt="productIco">
                   <h5>DESIGN</h5>
-                <P class="dev">Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.
-                  Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.
-                </P>s
+                <P class="dev">Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live. 
+                  This iterative process allows for changes as business requirements evolve.
+                </P>
               </div>
           </div>
 <!-- PORTOFOLIO -->
