add correct img path

--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
               </div>
             </div>
           </div>
-<!-- ###################################PORTOFOLIO#################################################-->
+<!-- ###################################PORTFOLIO#################################################-->
           <div class="container">
-            <div class="portfolio">
+            <div class="portflio">
                 <h2>Portfolio</h2>
                 <div class="row col-space">
                     <div class="col-md-3 p-2">
                         <div class="card card0">
-                            <img src="assets/portfolio/work4.jpg" class="img-fluid" alt="porfolio1">
+                            <img src="img/work4.jpg" class="img-fluid" alt="portfolio1">
                             <div class="project">
                                 <p id="pro">BLACKZ</p>
                             </div>
@@ -79,7 +79,7 @@
                     </div>
                     <div class="col-md-3 p-2">
                         <div class="card card1">
-                            <img src="assets/portfolio/work3.jpg" class="img-fluid" alt="porfolio2">
+                            <img src="img/work3.jpg" class="img-fluid" alt="portfolio2">
                             <div class="project2">
                                 <p id="pro">ANTORIO</p>
                             </div>
@@ -87,7 +87,7 @@
                     </div>
                     <div class="col-md-3 p-2">
                         <div class=" card card2">
-                            <img src="assets/portfolio/work2.jpg" class="img-fluid" alt="porfolio3">
+                            <img src="img/work2.jpg" class="img-fluid" alt="portfolio3">
                             <div class="project3">
                                 <p id="pro">PATTERNS</p>
                             </div>
@@ -95,7 +95,7 @@
                     </div>
                     <div class="col-md-3 p-2">
                         <div class="card card3">
-                            <img src="assets/portfolio/work1.jpg" class="img-fluid" alt="porfolio4">
+                            <img src="img/work1.jpg" class="img-fluid" alt="portfolio4">
                             <div class="project4">
                                 <p id="pro">BIZZ</p>
                             </div>
@@ -106,7 +106,7 @@
                 <div class="row col-space">
                     <div class="col-md-3 p-2">
                         <div class="card card4">
-                            <img src="assets/portfolio/work5.jpg" class="img-fluid" alt="porfolio5">
+                            <img src="img/work5.jpg" class="img-fluid" alt="portfolio5">
                             <div class="project5">                                
                                 <p id="pro">GOOD-DAY</p>
                             </div>
@@ -114,7 +114,7 @@
                     </div>
                     <div class="col-md-3 p-2">
                         <div class="card card5">
-                            <img src="assets/portfolio/work6.jpg" class="img-fluid" alt="porfolio6">
+                            <img src="img/work6.jpg" class="img-fluid" alt="portfolio6">
                             <div class="project6">
                                 <p id="pro">CALCULATOR</p>
                             </div>
@@ -122,7 +122,7 @@
                     </div>
                     <div class="col-md-3 p-2">
                         <div class="card card6">
-                            <img src="assets/portfolio/work7.jpg" class="img-fluid" alt="porfolio7">
+                            <img src="img/work7.jpg" class="img-fluid" alt="portfolio7">
                             <div class="project7">
                                 <p id="pro">BURNED</p>
                             </div>
@@ -130,7 +130,7 @@
                     </div>
                     <div class="col-md-3 p-2">
                         <div class=" card card7">
-                            <img src="assets/portfolio/work8.jpg" class="img-fluid" alt="porfolio8">
+                            <img src="img/work8.jpg" class="img-fluid" alt="portfolio8">
                             <div class="project8">
                                 <p id="pro">G-RESTO</p>
                             </div>
@@ -140,7 +140,7 @@
             </div>
           </div>
 <!--###########################################FORMS#################################################### -->
-        <div class="conta">
+        <div class="for">
           
           <img src="img/services.jpg">
 
