--- a/index.html
+++ b/index.html
@@ -140,8 +140,26 @@
             </div>
           </div>
 <!--###########################################FORMS#################################################### -->
-        <div class="for">
-          
+         <div class="formzs">
+           <h2> CONTACT US</h2>
+           <div class="row">
+             <div class="col-md-2"></div>
+             <div class="col-md-8">
+                  <div class row>
+                    <div class="col">
+                      <input type="text" name="name" id="formal" placeholder="Name" class="formcontrol"> 
+                    </div>
+                    <div class="form-group" id="sayhi"><br>
+                      <input type="text" name="email" id="formal" placeholder="Email" class="formcontrol"> 
+                    </div>
+                  </div>
+                  <div class="form-group" id="sayhi"><br>
+                    <textarea id="formA" id="message" rows="9" aria-placeholder="Your Message Here" name="message"></textarea>
+                  </div>
+                  <button type="submit" id="submit" class="btn btn-outline-light btn-lg btn-block">Submit</button>
+             </div>
+           </div>
+         </div>
           <img src="img/services.jpg">
 
         </div>
