--- a/index.html
+++ b/index.html
@@ -160,12 +160,15 @@
              </div>
            </div>
          </div>
-          <img src="img/services.jpg">
-
-        </div>
-        
-
-
+<!-- #######################################ICONS######################################## -->
+         <div class="icons">
+           <img id=>
+         </div>
+          
+         <div class="footer">
+           <h4>DELANI STUDIO</h4>
+           <P>2020</P>
+         </div>
     </div>  
   </body>
 </html>
