--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -58,7 +59,7 @@
               <div class="col=md-4">
                 <img src="img/product.png" id="productIcon" alt="productIco">
                   <h5>DESIGN</h5>
-                <P class="dev">Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live. 
+                <P class="design">Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live. 
                   This iterative process allows for changes as business requirements evolve.
                 </P>
               </div>
