--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+      <script src="js/jquery-3.5.1.js"></script>
        <script src="js/scripts.js"></script>
     <title>Delani Studio</title>
   </head>
